Refactored execution model
Signed-off-by: antublue <antublue@antublue.org>